Robo image and text gap issue

--- a/src/App.css
+++ b/src/App.css
@@ -750,8 +750,8 @@ section {
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 3rem;
+  justify-content:  flex-start;
+  gap: 6rem;
   text-align: left;
 }
 
